test/spec_vectors/br_on_cast/fail/module_8.wat
(module (type $t (func)) (func $f (param (ref null $t)) (result funcref) (local.get 0)) (func (param funcref) (result funcref funcref) (ref.null $t) (local.get 0) (br_on_cast 0 funcref (ref $t)) (drop) (call $f) (local.get 0)))